small changes to remove warnings